Removed usage of deprecated APIs.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>